traces/bug_103.txt
examples++-load/isolineP1.cpp:90: error: DEAD_STORE
  The value written to &mps (type Fem2D::MeshPoint*) is never used.
Showing all 1 steps of the trace


examples++-load/isolineP1.cpp:90:46: Write of unused value
88.   AnyType ISOLINE_P1_Op::operator()(Stack stack)  const 
89.   {
90.     MeshPoint *mp(MeshPointStack(stack)) , mps=*mp;
                                                   ^
91.     Mesh * pTh= GetAny<Mesh *>((*eTh)(stack));
92.     string * ffname= GetAny<string *>( (*filename)(stack) );
